openshift/deployments/common/java-runner-deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: java-runner
spec:
  replicas: 1
  triggers: {}
  strategy:
    type: Rolling
  paused: false
  revisionHistoryLimit: 10
  minReadySeconds: 0
  selector:
      deploymentconfig: java-runner
  template:
    metadata:
      labels:
        app: java-runner
        deploymentconfig: java-runner
    spec:
      containers:
      - image: java-runner
        imagePullPolicy: Always
        name: k8s-java-runner
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      volumes: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
