openshift/deployments/common/java-runner-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-runner
  name: java-runner-service
spec:
  ports:
  - port: 80
    name: 80-tcp
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-runner
  sessionAffinity: None
  type: ClusterIP
